fix: overflow of image when rotated for the attachment sections
issue: when rotating the image it causes overflow when at 90/270
degrees.
fix : change the parent div pictures-1 to have more control over the
size of the children from flex to grid and apply a autofit minmax 1fr
grid column template for a more responsive implementation for
mobile-tablet-desktop.

--- a/public/assets/css/entitieslist.css
+++ b/public/assets/css/entitieslist.css
@@ -701,12 +701,9 @@ section {
 
 .pictures-section {
   display: grid;
-  grid-template-columns: repeat(auto-fit, minmax(300px,1fr));
-  /* height: fit-content; */
-  /* grid-template-rows: auto; */
-  /* align-items: center;
-  justify-content: space-between; */
-  /* flex-wrap: wrap; */
+  width: 100%;
+  grid-template-columns: repeat(auto-fit, minmax(300px,1fr)); /* ensure a responsive design */
+  max-height: 700px; /* to ensure there is no overflow */
   gap: 32px;
 }
 
@@ -731,6 +728,7 @@ section {
   flex: auto; /* Equal space for both placeholders */
   max-width: 100%; /* Limit the size to prevent overflow */
   width: 100%;
+  height: 100%;
   /* aspect-ratio: 4 / 3; */
   aspect-ratio: 1/1;
 
